--- a/style.css
+++ b/style.css
@@ -537,7 +537,7 @@ textarea:focus {
 
 .header_site {
     width: 100%;
-    background-color: #000000;
+    /*background-color: #000000;*/
     padding: 30px 0 0 0;
     position: absolute;
     top: 0;
@@ -739,6 +739,11 @@ textarea:focus {
 .sect_1 {
     background-color: #000000;
     padding: 225px 0 100px 0;
+    padding-bottom: 0;
+    background-image: url(img/promo_bg_2.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .promo_h1 {
@@ -922,7 +927,7 @@ h1 {
 }
 
 .steps_chart_wrapp {
-
+    background: rgba(33, 53, 8, .7);
 }
 
 .steps_chart {
