--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ textarea:focus:-ms-input-placeholder      {opacity: 0; transition: opacity .3s e
 
 section {
     position: relative;
-    padding: 10px 0;
+    padding: 50px 0;
 }
 
 h1 {
@@ -1557,6 +1557,7 @@ h1 {
     /*width: 24%;*/
     /*float: left;*/
     max-width: 300px;
+    margin: 40px 0;
     /*padding: 0 30px;*/
 }
 
@@ -1611,7 +1612,9 @@ h1 {
 }
 
 .thumb_1 .description {
-    margin: 17px 0;
+    /*margin: 17px 0;*/
+    margin: 16px 0;
+    min-height: 127px;
     text-align: center;
 }
 
@@ -1632,12 +1635,23 @@ h1 {
     color: #8cf700
 }
 
-.thumb_1 .img_box .inner {
-
+.thumb_1 .img_box {
+    height: 300px;
+    position: relative;
 }
 
 .thumb_1 .img_box img {
-
+    display: block;
+    width: auto;
+    height: auto;
+    max-height: 100%;
+    max-width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 /*-- /Section 4 - Main Page --*/
